# gdg_ai_2025

./: README.md  main.py
agents/: README.md  app.py  hello.py  pyproject.toml
agents/data/: bandit_state.json
agents/fast_api_prompt_opti/: agent.py  bandit_cli.py  generator.py  main.py
agents/prequisite_agent/: .env
react_frontend/: package-lock.json  package.json
react_frontend/src/components/subject/: GraphView.tsx  MaterialView.tsx  MaterialViewer.tsx  QuickFireMode.tsx  TournamentMode.tsx
react_frontend/src/context/: AppContext.tsx
